components/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  ports:
  - name: https-tcp
    port: 443
    protocol: TCP
    targetPort: https-tcp
  - name: https-udp
    port: 443
    protocol: UDP
    targetPort: https-udp
  - name: dns-tls-tcp
    port: 853
    protocol: TCP
    targetPort: dns-tls-tcp
  - name: dns-tls-udp
    port: 853
    protocol: UDP
    targetPort: dns-tls-udp
  - name: dnscrypt-tcp
    port: 5443
    protocol: TCP
    targetPort: dnscrypt-tcp
  - name: dnscrypt-udp
    port: 5443
    protocol: UDP
    targetPort: dnscrypt-udp
  selector:
    app.kubernetes.io/component: adguard-home
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: apprise
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: apprise
    app.kubernetes.io/name: apprise
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: bifrost
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: bifrost
    app.kubernetes.io/name: bifrost
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: clamav
spec:
  ports:
  - name: clamd
    port: 3310
    protocol: TCP
    targetPort: clamd
  selector:
    app.kubernetes.io/component: clamav
    app.kubernetes.io/name: clamav
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: dbx
spec:
  ports:
  - name: http
    port: 4224
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: dbx
    app.kubernetes.io/name: dbx
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: gloomhaven
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: secretariat
    app.kubernetes.io/name: gloomhaven
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: huginn
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: huginn
    app.kubernetes.io/name: huginn
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: muninn
spec:
  ports:
  - name: mcp
    port: 8000
    protocol: TCP
    targetPort: mcp
  - name: webdav
    port: 8080
    protocol: TCP
    targetPort: webdav
  selector:
    app.kubernetes.io/component: muninn
    app.kubernetes.io/name: muninn
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: cloudflare-warp
    app.kubernetes.io/name: proxy
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-ch
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: tailscale
    app.kubernetes.io/name: wireguard
    app.kubernetes.io/part-of: components
    kubernetes.progamesigner.dev/vpn-region: ch
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-de
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: tailscale
    app.kubernetes.io/name: wireguard
    app.kubernetes.io/part-of: components
    kubernetes.progamesigner.dev/vpn-region: de
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-jp
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: tailscale
    app.kubernetes.io/name: wireguard
    app.kubernetes.io/part-of: components
    kubernetes.progamesigner.dev/vpn-region: jp
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-tw
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: tailscale
    app.kubernetes.io/name: wireguard
    app.kubernetes.io/part-of: components
    kubernetes.progamesigner.dev/vpn-region: tw
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-us
spec:
  ports:
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: tailscale
    app.kubernetes.io/name: wireguard
    app.kubernetes.io/part-of: components
    kubernetes.progamesigner.dev/vpn-region: us
---
apiVersion: v1
kind: Service
metadata:
  name: rsshub
spec:
  ports:
  - name: http
    port: 1200
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: rsshub
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: seafile
    port: 8000
    protocol: TCP
    targetPort: seafile
  - name: seafdav
    port: 8080
    protocol: TCP
    targetPort: seafdav
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-seafhttp
spec:
  ports:
  - name: seafhttp
    port: 8082
    protocol: TCP
    targetPort: seafhttp
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-notification
spec:
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: notification
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-metadata
spec:
  ports:
  - name: http
    port: 8084
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: metadata
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-seadoc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: seadoc
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-seadoc-websocket
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: seadoc
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-thumbnail
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: thumbnail
    app.kubernetes.io/name: seafile
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: searxng
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: sleipnir
spec:
  ports:
  - name: moshi
    port: 24544
    protocol: TCP
    targetPort: moshi
  selector:
    app.kubernetes.io/component: sleipnir
    app.kubernetes.io/name: sleipnir
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  ports:
  - name: http
    port: 8384
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: syncthing
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-network
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: unifi-network
    app.kubernetes.io/name: unifi-network
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: windmill
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: windmill
    app.kubernetes.io/name: windmill
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: windmill-api
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: windmill
    app.kubernetes.io/name: windmill
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: windmill-extra
spec:
  ports:
  - name: lsp
    port: 3001
    protocol: TCP
    targetPort: lsp
  - name: multiplayer
    port: 3002
    protocol: TCP
    targetPort: multiplayer
  - name: debugger
    port: 3003
    protocol: TCP
    targetPort: debugger
  selector:
    app.kubernetes.io/component: windmill-extra
    app.kubernetes.io/name: windmill
    app.kubernetes.io/part-of: components
---
apiVersion: v1
kind: Service
metadata:
  name: local-dns
spec:
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  selector:
    app.kubernetes.io/component: adguard-home
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/part-of: components
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: local-relaysrv
spec:
  ports:
  - name: relaysrv
    port: 22067
    protocol: TCP
    targetPort: relaysrv
  - name: relaysrv-status
    port: 22070
    protocol: TCP
    targetPort: relaysrv-status
  selector:
    app.kubernetes.io/component: syncthing-relay
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/part-of: components
  type: LoadBalancer
