components/tunnels.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https-tcp
    port: 443
    protocol: TCP
    targetPort: https-tcp
  - name: https-udp
    port: 443
    protocol: UDP
    targetPort: https-udp
  - name: socks
    port: 1080
    protocol: TCP
    targetPort: socks
  selector:
    app.kubernetes.io/component: haproxy
    app.kubernetes.io/name: tunnels
    app.kubernetes.io/part-of: components
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: haproxy
    app.kubernetes.io/name: tunnels
    app.kubernetes.io/part-of: components
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: haproxy
      app.kubernetes.io/name: tunnels
      app.kubernetes.io/part-of: components
  template:
    metadata:
      labels:
        app.kubernetes.io/component: haproxy
        app.kubernetes.io/name: tunnels
        app.kubernetes.io/part-of: components
    spec:
      automountServiceAccountToken: false
      containers:
      - name: haproxy
        image: network/haproxy:latest
        ports:
        - name: socks
          containerPort: 1080
          protocol: TCP
        - name: stats
          containerPort: 1999
          protocol: TCP
        - name: http
          containerPort: 8000
          protocol: TCP
        - name: https-tcp
          containerPort: 8443
          protocol: TCP
        - name: https-udp
          containerPort: 8443
          protocol: UDP
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /stats
            port: stats
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 300m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_ADMIN
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 99
        volumeMounts:
        - name: cert
          mountPath: /etc/ssl/certs/haproxy
          readOnly: true
        - name: conf
          mountPath: /usr/local/etc/haproxy
          readOnly: true
      enableServiceLinks: false
      serviceAccountName: default
      volumes:
      - name: cert
        secret:
          secretName: tls-com-progamesigner
          defaultMode: 420
          items:
          - key: tls.crt
            path: crt.pem
          - key: tls.key
            path: crt.pem.key
      - name: conf
        configMap:
          name: tunnels
          items:
          - key: haproxy.cfg
            path: haproxy.cfg
          - key: tunnels.map
            path: tunnels.map
