components/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: adguard
    nginx.org/ssl-services: adguard-home
  name: adguard-home
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: adguard.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: adguard-home
            port:
              name: https-tcp
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - adguard.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: ai
    nginx.org/websocket-services: bifrost
  name: bifrost
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: ai.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: bifrost
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ai.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: dashboard
    nginx.org/websocket-services: dashboard
  name: dashboard
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: dashboard.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dashboard.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: database
    nginx.org/client-max-body-size: 2G
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
  name: dbx
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: database.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: dbx
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - database.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: home
    nginx.org/websocket-services: home-assistant
  name: home-assistant
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: home.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: media
    nginx.org/rewrites: serviceName=windmill-api rewrite=/api/r/default/files/
  name: media
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: media.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: windmill-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - media.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: memory
    nginx.org/websocket-services: muninn
  name: muninn
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: memory.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: muninn
            port:
              name: mcp
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - memory.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: drive
    nginx.org/location-snippets: |
      add_header Access-Control-Allow-Origin *;

      proxy_request_buffering off;

      proxy_set_header Connection "";
    nginx.org/client-max-body-size: '0'
    nginx.org/proxy-read-timeout: 24h
    nginx.org/proxy-send-timeout: 24h
    nginx.org/rewrites: serviceName=seafile-seafhttp rewrite=/;serviceName=seafile-seadoc rewrite=/
    nginx.org/websocket-services: seafile-notification,seafile-seadoc-websocket
  name: seafile
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: drive.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: seafile-notification
            port:
              name: http
        path: /notification/ping
        pathType: Exact
      - backend:
          service:
            name: seafile-notification
            port:
              name: http
        path: /notification
        pathType: Exact
      - backend:
          service:
            name: seafile-seadoc
            port:
              name: http
        path: /sdoc-server/
        pathType: Prefix
      - backend:
          service:
            name: seafile-seadoc-websocket
            port:
              name: http
        path: /socket.io/
        pathType: Prefix
      - backend:
          service:
            name: seafile-thumbnail
            port:
              name: http
        path: /thumbnail/
        pathType: Prefix
      - backend:
          service:
            name: seafile
            port:
              name: seafdav
        path: /:dir_browser
        pathType: Prefix
      - backend:
          service:
            name: seafile
            port:
              name: seafdav
        path: /seafdav/
        pathType: Prefix
      - backend:
          service:
            name: seafile-seafhttp
            port:
              name: seafhttp
        path: /seafhttp/
        pathType: Prefix
      - backend:
          service:
            name: seafile
            port:
              name: http
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: seafile
            port:
              name: seafile
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - drive.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: code
    nginx.org/proxy-read-timeout: 24h
    nginx.org/proxy-send-timeout: 24h
    nginx.org/websocket-services: sleipnir
  name: sleipnir
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: code.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: sleipnir
            port:
              name: moshi
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - code.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: syncthing
    nginx.org/ssl-services: syncthing
  name: syncthing
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: syncthing.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncthing.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: network
    nginx.org/ssl-services: unifi-network
  name: unifi-network
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: network.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: unifi-network
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - network.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.dev/hostname: api,workflow
    nginx.org/rewrites: serviceName=windmill-api rewrite=/api/r/default/
    nginx.org/websocket-services: windmill,windmill-api,windmill-extra
  name: windmill
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: api.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: windmill-api
            port:
              name: http
        path: /
        pathType: Prefix
  - host: workflow.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: windmill-extra
            port:
              name: lsp
        path: /ws/
        pathType: Prefix
      - backend:
          service:
            name: windmill-extra
            port:
              name: debugger
        path: /ws_debug/
        pathType: Prefix
      - backend:
          service:
            name: windmill-extra
            port:
              name: multiplayer
        path: /ws_mp/
        pathType: Prefix
      - backend:
          service:
            name: windmill
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.progamesigner.dev
    - workflow.progamesigner.dev
    secretName: tls-dev-progamesigner
